--- a/misc/simple-with-numbers.ipynb
+++ b/misc/simple-with-numbers.ipynb
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ O(\\sqrt{n}) $"
+    "$ O(n\\sqrt{n}) $"
    ]
   },
   {
