--- a/misc/simple-with-numbers.ipynb
+++ b/misc/simple-with-numbers.ipynb
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ O(n\\log_2{n}\\log_2{n})$ - Sieve of Eratosthenes, using array: $\\{3, 5, 7, ..., N-1\\}$, where $N$ equals $n+1$ if $n$ is even or $n$ otherwise."
+    "$ O(n\\log{\\log{n}})$ - Sieve of Eratosthenes, using array: $\\{3, 5, 7, ..., N-1\\}$, where $N$ equals $n+1$ if $n$ is even or $n$ otherwise."
    ]
   },
   {
