--- a/misc/arrays.ipynb
+++ b/misc/arrays.ipynb
@@ -416,7 +416,7 @@
       "source": [
         "### Quickselect $O(n\\log{n})$\n",
         "\n",
-        "Usually faster than by sorting.\n",
+        "Average $O(N)$.\n",
         "\n",
         "(...) It is related to the quicksort sorting algorithm. Like quicksort, it was developed by Tony Hoare, and thus is also known as Hoare's selection algorithm. Like quicksort, it is efficient in practice and has good average-case performance, but has poor worst-case performance. Quickselect and its variants are the selection algorithms most often used in efficient real-world implementations.\n",
         "\n",
