--- a/asd/arrays.ipynb
+++ b/asd/arrays.ipynb
@@ -379,25 +379,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find minimal and absent"
+    "## Find minimal and absent\n",
+    "\n",
+    "$T$ - sorted array with values from $[1..m]$, $n < m$  \n",
+    "Find the smallest number which is absent in $T$.\n",
+    "\n",
+    "### $O(n\\log{n})$\n",
+    "\n",
+    "Using binary search."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def minimal_absent(T, m):\n",
     "  if T[-1] == len(T):\n",
@@ -412,9 +408,7 @@
     "    elif i + 1 >= T[i]:\n",
     "      l = i + 1\n",
     "\n",
-    "  return l + 1\n",
-    "\n",
-    "minimal_absent([1], 60)\n"
+    "  return l + 1\n"
    ]
   },
   {
@@ -426,11 +420,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _ in range(100000):\n",
+    "for _ in range(1000):\n",
     "  m = randint(1, 100)\n",
     "  T = sorted(list(set([randint(1, m + 1) for _ in range(randint(1, 10))])))\n",
     "\n",
