--- a/asd/arrays.ipynb
+++ b/asd/arrays.ipynb
@@ -384,7 +384,7 @@
     "$T$ - sorted array with values from $[1..m]$, $n < m$  \n",
     "Find the smallest number which is absent in $T$.\n",
     "\n",
-    "### $O(n\\log{n})$\n",
+    "### $O(\\log{n})$\n",
     "\n",
     "Using binary search."
    ]
